--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 14:39]
+#+CAPTION: Clock summary at [2017-01-30 Mon 14:51]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:32* |      |      | 100.0 |
+| *Total time*                                                                | *4:43* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:32   |      |      | 100.0 |
-| Active                                                                      |        | 4:32 |      | 100.0 |
+| Stories                                                                     | 4:43   |      |      | 100.0 |
+| Active                                                                      |        | 4:43 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   7.4 |
-| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  91.9 |
-| STARTED Allow disabling =invalid= value in enumerations                     |        |      | 0:01 |   0.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   7.1 |
+| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  88.3 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   4.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -114,7 +114,9 @@ Tasks:
 - add resolver support to resolve name
 - add meta-data flag for using language default type
 
-*** STARTED Allow disabling =invalid= value in enumerations           :story:
+*** COMPLETED Allow disabling =invalid= value in enumerations         :story:
+    CLOSED: [2017-01-30 Mon 14:49]
+    CLOCK: [2017-01-30 Mon 14:40]--[2017-01-30 Mon 14:51] =>  0:11
     CLOCK: [2017-01-30 Mon 14:30]--[2017-01-30 Mon 14:31] =>  0:01
 
 #+begin_quote
