--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,18 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 14:51]
+#+CAPTION: Clock summary at [2017-01-30 Mon 15:22]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:43* |      |      | 100.0 |
+| *Total time*                                                                | *5:15* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:43   |      |      | 100.0 |
-| Active                                                                      |        | 4:43 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   7.1 |
-| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  88.3 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   4.2 |
+| Stories                                                                     | 5:15   |      |      | 100.0 |
+| Active                                                                      |        | 5:15 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.3 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   6.3 |
+| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  79.4 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   3.8 |
+| STARTED Add support for configurable enumeration values                     |        |      | 0:32 |  10.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -128,7 +129,8 @@ At present all enumerations must have an invalid value. One can
 conceive cases where that is not a useful thing. We should have a
 dynamic extension flag that disables it.
 
-*** Add support for configurable enumeration values                   :story:
+*** STARTED Add support for configurable enumeration values           :story:
+    CLOCK: [2017-01-30 Mon 14:50]--[2017-01-30 Mon 15:22] =>  0:32
 
 At present we generate the enumeration value as part of the
 transformation process in =yarn.dia=, based on the relative position
