--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 17:37]
+#+CAPTION: Clock summary at [2017-01-30 Mon 17:50]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:29* |      |      | 100.0 |
+| *Total time*                                                                | *7:41* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:29   |      |      | 100.0 |
-| Active                                                                      |        | 7:29 |      | 100.0 |
+| Stories                                                                     | 7:41   |      |      | 100.0 |
+| Active                                                                      |        | 7:41 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   4.5 |
-| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  55.7 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   2.7 |
-| STARTED Add support for configurable enumeration values                     |        |      | 2:46 |  37.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   4.3 |
+| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  54.2 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   2.6 |
+| STARTED Add support for configurable enumeration values                     |        |      | 2:58 |  38.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -130,6 +130,7 @@ conceive cases where that is not a useful thing. We should have a
 dynamic extension flag that disables it.
 
 *** STARTED Add support for configurable enumeration values           :story:
+    CLOCK: [2017-01-30 Mon 17:38]--[2017-01-30 Mon 17:50] =>  0:12
     CLOCK: [2017-01-30 Mon 15:23]--[2017-01-30 Mon 17:37] =>  2:14
     CLOCK: [2017-01-30 Mon 14:50]--[2017-01-30 Mon 15:22] =>  0:32
 
