--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 18:23]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:12* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:12   |      |      | 100.0 |
-| Active                                                                      |        | 8:12 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:01 |   0.2 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:20 |   4.1 |
-| COMPLETED Add support for configurable enumerations types                   |        |      | 4:10 |  50.8 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |        |      | 0:12 |   2.4 |
-| STARTED Add support for configurable enumeration values                     |        |      | 3:29 |  42.5 |
+#+CAPTION: Clock summary at [2017-01-30 Mon 23:01]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *10:28* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 10:28   |       |      | 100.0 |
+| Active                                                                      |         | 10:28 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   6.8 |
+| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  39.8 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.9 |
+| COMPLETED Add support for configurable enumeration values                   |         |       | 5:22 |  51.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -36,6 +36,7 @@ Updates to sprint and product backlog.
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2017-01-30 Mon 09:44]
+    CLOCK: [2017-01-30 Mon 20:45]--[2017-01-30 Mon 21:08] =>  0:23
     CLOCK: [2017-01-30 Mon 09:24]--[2017-01-30 Mon 09:44] =>  0:20
 
 Add github release notes for previous sprint.
@@ -129,7 +130,9 @@ At present all enumerations must have an invalid value. One can
 conceive cases where that is not a useful thing. We should have a
 dynamic extension flag that disables it.
 
-*** STARTED Add support for configurable enumeration values           :story:
+*** COMPLETED Add support for configurable enumeration values         :story:
+    CLOSED: [2017-01-30 Mon 23:01]
+    CLOCK: [2017-01-30 Mon 21:08]--[2017-01-30 Mon 23:01] =>  1:53
     CLOCK: [2017-01-30 Mon 18:20]--[2017-01-30 Mon 18:23] =>  0:03
     CLOCK: [2017-01-30 Mon 17:51]--[2017-01-30 Mon 18:19] =>  0:28
     CLOCK: [2017-01-30 Mon 17:38]--[2017-01-30 Mon 17:50] =>  0:12
