--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-30 Mon 23:01]
+#+CAPTION: Clock summary at [2017-01-30 Mon 23:06]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:28* |       |      | 100.0 |
+| *Total time*                                                                | *10:32* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:28   |       |      | 100.0 |
-| Active                                                                      |         | 10:28 |      | 100.0 |
+| Stories                                                                     | 10:32   |       |      | 100.0 |
+| Active                                                                      |         | 10:32 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   6.8 |
-| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  39.8 |
+| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  39.6 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.9 |
-| COMPLETED Add support for configurable enumeration values                   |         |       | 5:22 |  51.3 |
+| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  51.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -132,6 +132,7 @@ dynamic extension flag that disables it.
 
 *** COMPLETED Add support for configurable enumeration values         :story:
     CLOSED: [2017-01-30 Mon 23:01]
+    CLOCK: [2017-01-30 Mon 23:02]--[2017-01-30 Mon 23:06] =>  0:04
     CLOCK: [2017-01-30 Mon 21:08]--[2017-01-30 Mon 23:01] =>  1:53
     CLOCK: [2017-01-30 Mon 18:20]--[2017-01-30 Mon 18:23] =>  0:03
     CLOCK: [2017-01-30 Mon 17:51]--[2017-01-30 Mon 18:19] =>  0:28
