--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-31 Tue 06:58]
+#+CAPTION: Clock summary at [2017-01-31 Tue 07:07]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:05* |       |      | 100.0 |
+| *Total time*                                                                | *11:13* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:05   |       |      | 100.0 |
-| Active                                                                      |         | 11:05 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   6.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  37.6 |
+| Stories                                                                     | 11:13   |       |      | 100.0 |
+| Active                                                                      |         | 11:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   6.4 |
+| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  37.1 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.8 |
-| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  49.0 |
-| STARTED Create a new yarn type for primitives                               |         |       | 0:33 |   5.0 |
+| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  48.4 |
+| STARTED Create a new yarn type for primitives                               |         |       | 0:41 |   6.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,6 +156,7 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-31 Tue 06:59]--[2017-01-31 Tue 07:07] =>  0:08
     CLOCK: [2017-01-31 Tue 06:31]--[2017-01-31 Tue 06:58] =>  0:27
     CLOCK: [2017-01-31 Tue 05:31]--[2017-01-31 Tue 05:37] =>  0:06
 
