--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-31 Tue 13:24]
+#+CAPTION: Clock summary at [2017-01-31 Tue 13:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:39* |       |      | 100.0 |
+| *Total time*                                                                | *16:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:39   |       |      | 100.0 |
-| Active                                                                      |         | 15:39 |      | 100.0 |
+| Stories                                                                     | 16:06   |       |      | 100.0 |
+| Active                                                                      |         | 10:32 |      |  65.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   4.6 |
-| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  26.6 |
-| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.3 |
-| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  34.7 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 5:07 |  32.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   4.5 |
+| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  25.9 |
+| COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.2 |
+| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  33.7 |
+| STARTED Add support for primitives across the pipeline                      |         |  5:34 |      |  34.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -155,7 +155,8 @@ We could:
 - add meta-data for users to supply their own values;
 - add meta-data to disable setting the enumerator value altogether.
 
-*** STARTED Add support for primitives across the pipeline            :story:
+** STARTED Add support for primitives across the pipeline             :story:
+    CLOCK: [2017-01-31 Tue 13:25]--[2017-01-31 Tue 13:52] =>  0:27
     CLOCK: [2017-01-31 Tue 12:45]--[2017-01-31 Tue 13:24] =>  0:39
     CLOCK: [2017-01-31 Tue 11:53]--[2017-01-31 Tue 12:00] =>  0:07
     CLOCK: [2017-01-31 Tue 11:46]--[2017-01-31 Tue 11:52] =>  0:06
