--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -157,6 +157,7 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Handle "special includes" correctly                       :story:
+    CLOCK: [2017-02-01 Wed 16:54]--[2017-02-01 Wed 17:43] =>  0:49
     CLOCK: [2017-02-01 Wed 15:09]--[2017-02-01 Wed 16:53] =>  1:44
 
 We did a quick hack to handle "special includes": we simply "detected"
