--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -157,6 +157,8 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Handle "special includes" correctly                       :story:
+    CLOCK: [2017-02-02 Thu 08:02]--[2017-02-02 Thu 08:52] =>  0:50
+    CLOCK: [2017-02-02 Thu 06:48]--[2017-02-02 Thu 07:32] =>  0:44
     CLOCK: [2017-02-01 Wed 16:54]--[2017-02-01 Wed 17:43] =>  0:49
     CLOCK: [2017-02-01 Wed 15:09]--[2017-02-01 Wed 16:53] =>  1:44
 
